--- a/raspberry/main/index.templ
+++ b/raspberry/main/index.templ
@@ -55,6 +55,7 @@ templ hello(name string) {
             </tr>
           </tbody>
         </table>
+          // <span hx-ext="sse" sse-connect="/events" hx-swap="beforeend" sse-swap="sowitroli"></span>
         <table class="charts-css line hide-data multiple">
           <caption>
             Line Example #1
